layout: Fix Footer contribution links wrapping on mobile (#68) Currently we've got list items of contribution links wrapping weirdly on mobile with the first items bullets in the second (wrapped) row featuring a bullet and first doesn't. This amendment is ensuring clickability and better wrapping on all major resolutions while saving space on wider screens.

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -447,14 +447,13 @@ code {
 	}
 
 	.footer__list li {
-		float: left;
-		margin-left: 2.4rem;
-		padding: 0;
+		list-style: none none;
+		display: block;
+		padding: 0.8rem 0 0;
 	}
 
 	.footer__list li:first-child {
-		list-style: none none;
-		margin-left: 0;
+		padding-top: 0;
 	}
 
 	.footer__list a {
@@ -584,6 +583,22 @@ code {
 	figure {
 		margin-left: -3.2rem;
 		margin-right: -3.2rem;
+	}
+
+	.footer__list li {
+		display: list-item;
+		float: left;
+		padding: 0;
+	}
+
+	.footer__list li:before {
+		content: '\2022'; /* bullet dot: '•' */
+		padding: 0 0.8rem;
+	}
+
+	.footer__list li:first-child:before {
+		content: '';
+		padding: 0;
 	}
 }
 
